--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,17 +1,10 @@
-<ion-view>
-  <ion-nav-buttons side="left">
-    <a class="button icon ion-android-person no-border" nav-direction=forward native-ui-sref="tab.account"
-       native-options="{type: 'slide',direction: 'left'}"></a>
-  </ion-nav-buttons>
-  <ion-nav-title>
-    <h1 class="title "> 主页</h1>
-  </ion-nav-title>
-  <ion-nav-buttons side="right">
-    <button class="button icon ion-plus no-border" ng-click="openPopover($event)"></button>
-  </ion-nav-buttons>
-
-  <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true">
-
+<ion-view hide-nav-bar="true">
+  <ion-content overflow-scroll="false" class="positive-bg" has-bouncing="true">
+    <div class="row text-center padding-vertical">
+      <span class="col">深圳</span>
+      <input type="text" class="col-75 ">
+      <i class="col icon ion-ios-search"></i>
+    </div>
 
   </ion-content>
 </ion-view>
