--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,8 +1,8 @@
 <ion-view hide-nav-bar="true">
   <ion-content overflow-scroll="false" class="positive-bg" has-bouncing="true">
-    <div class="row text-center padding-vertical">
-      <span class="col">深圳</span>
-      <input type="text" class="col-75 ">
+    <div class="row text-center padding-vertical light " id="main-search">
+      <span class="col ">深圳 <i class="icon ion-ios-arrow-down"></i></span>
+      <input type="text" class="col-75">
       <i class="col icon ion-ios-search"></i>
     </div>
 
