元亨祥母婴商城

--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,9 +1,9 @@
 <ion-view hide-nav-bar="true">
   <ion-content overflow-scroll="false" class="positive-bg" has-bouncing="true">
-    <div class="row text-center padding-vertical light " id="main-search">
-      <span class="col ">深圳 <i class="icon ion-ios-arrow-down"></i></span>
+    <div class="row text-center padding-vertical light row-center " id="main-search">
+      <span class="col-15  ">深圳 <i class="icon ion-ios-arrow-down"></i></span>
       <input type="text" class="col-75">
-      <i class="col icon ion-ios-search"></i>
+      <i class="col  icon ion-ios-search"></i>
     </div>
 
   </ion-content>
