--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,3 +1,29 @@
+#main-search{
+  font-size: 1rem;
+}
+#main-search input{
+  padding-left: 0.5rem;
+  border-radius: 0.3rem;
+  background-color: rgba(255,255,255,0.6);
+}
+#main-search .ion-ios-search{
+font-size: 1.3rem;
+}
+#main-slide{
+  position: fixed;
+  top: 0;
+}
+#main-slide.slider {
+  height: 9rem !important;
+}
+
+#main-slide.slider img {
+  height: 8.6rem !important;
+}
+
+.slider-pager-page.active {
+  color: #FF81B0;
+}
 .tool-tip {
   position: absolute;
   z-index: 10000;
