--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content overflow-scroll="false" class="positive-bg" has-bouncing="true">
+  <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true">
     <div class="row text-center padding-vertical light row-center " id="main-search">
       <strong class="col-15">深圳 <i class="icon ion-arrow-down-b"></i></strong>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
@@ -8,9 +8,75 @@
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
                    delegate-handle="slideboximgs" id="main-slide">
       <ion-slide>
-        <img ng-src="" alt="" class="full-image"/>
+        <img ng-src="img/banner/1.png" alt="" class="full-image"/>
+      </ion-slide>
+      <ion-slide>
+        <img ng-src="img/banner/2.png" alt="" class="full-image"/>
+      </ion-slide>
+      <ion-slide>
+        <img ng-src="img/banner/3.png" alt="" class="full-image"/>
       </ion-slide>
     </ion-slide-box>
+    <div class="main-list row light-bg text-center main-list-first">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>奶粉专区</p>
+          </a>
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>宝宝用品</p>
+          </a>
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>尿裤湿巾</p>
+          </a>
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>营养桶食</p>
+          </a>
+    </div>
+    <div class="main-list row light-bg text-center">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>童车童装</p>
+          </a>
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>玩具乐器</p>
+          </a>
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>寝居服饰</p>
+          </a>
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+          <p>孕妈中心</p>
+          </a>
+    </div>
+    <p></p>
+    <ion-list>
+      <ion-item class="text-center"><strong>热卖产品</strong></ion-item>
+      <ion-item class="item-thumbnail-left main-hot-sale">
+        <img ng-src="img/main/1.png" alt="">
+        <h2>婴幼儿配方奶粉3段</h2>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+      </ion-item>
+    </ion-list>
+   <p></p>
+    <ion-list>
+      <ion-item class="text-center"><strong>推荐产品</strong></ion-item>
+      <ion-item class="item-thumbnail-left main-hot-sale">
+        <img ng-src="img/main/1.png" alt="">
+        <h2>婴幼儿配方奶粉3段</h2>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+      </ion-item>
+      <ion-item class="item-thumbnail-left main-hot-sale">
+        <img ng-src="img/main/1.png" alt="">
+        <h2>婴幼儿配方奶粉3段</h2>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+      </ion-item>
+      <ion-item class="item-thumbnail-left main-hot-sale">
+        <img ng-src="img/main/1.png" alt="">
+        <h2>婴幼儿配方奶粉3段</h2>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
 
