--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -19,31 +19,31 @@
     </ion-slide-box>
     <div class="main-list row light-bg text-center main-list-first">
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>奶粉专区</p>
-          </a>
+        <p>奶粉专区</p>
+      </a>
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>宝宝用品</p>
-          </a>
+        <p>宝宝用品</p>
+      </a>
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>尿裤湿巾</p>
-          </a>
+        <p>尿裤湿巾</p>
+      </a>
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>营养桶食</p>
-          </a>
+        <p>营养桶食</p>
+      </a>
     </div>
     <div class="main-list row light-bg text-center">
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>童车童装</p>
-          </a>
+        <p>童车童装</p>
+      </a>
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>玩具乐器</p>
-          </a>
+        <p>玩具乐器</p>
+      </a>
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>寝居服饰</p>
-          </a>
+        <p>寝居服饰</p>
+      </a>
       <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
-          <p>孕妈中心</p>
-          </a>
+        <p>孕妈中心</p>
+      </a>
     </div>
     <p></p>
     <ion-list>
@@ -51,30 +51,77 @@
       <ion-item class="item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/1.png" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
-        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
+          class="col icon ion-ios-cart positive text-right"></i></p>
+      </ion-item>
+      <ion-item>
+        <ion-scroll direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" class="full-image"
+                    style="overflow: hidden;" >
+          <div id="main-scroll">
+            <span>
+              <img ng-src="img/main/1.png" alt=""/>
+              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <p class="row"><strong class="energized">￥49.88</strong><i
+                class="col icon ion-ios-cart positive text-right"></i></p>
+            </span>
+            <span>
+              <img ng-src="img/main/1.png" alt="">
+              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <p class="row"><strong class="energized">￥49.88</strong><i
+                class="col icon ion-ios-cart positive text-right"></i></p>
+            </span>
+            <span>
+              <img ng-src="img/main/1.png" alt="">
+              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <p class="row"><strong class="energized">￥49.88</strong><i
+                class="col icon ion-ios-cart positive text-right"></i></p>
+            </span>
+            <span>
+              <img ng-src="img/main/1.png" alt="">
+              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <p class="row"><strong class="energized">￥49.88</strong><i
+                class="col icon ion-ios-cart positive text-right"></i></p>
+            </span>
+            <!--            <span>
+                          <img ng-src="img/main/1.png" alt="">
+                          <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+                          <p class="row"><strong class="energized">￥49.88</strong><i
+                            class="col icon ion-ios-cart positive text-right"></i></p>
+                        </span>
+                        <span >
+                          <img ng-src="img/main/1.png" alt="">
+                          <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+                          <p class="row"><strong class="energized">￥49.88</strong><i class="col icon ion-ios-cart positive text-right"></i></p>
+                        </span>-->
+          </div>
+
+        </ion-scroll>
       </ion-item>
     </ion-list>
-   <p></p>
+    <p></p>
     <ion-list>
       <ion-item class="text-center"><strong>推荐产品</strong></ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/1.png" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
-        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
+          class="col icon ion-ios-cart positive text-right"></i></p>
       </ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/1.png" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
-        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
+          class="col icon ion-ios-cart positive text-right"></i></p>
       </ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
         <img ng-src="img/main/1.png" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
-        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段  700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i class="col icon ion-ios-cart positive text-right"></i></p>
+        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
+          class="col icon ion-ios-cart positive text-right"></i></p>
       </ion-item>
     </ion-list>
   </ion-content>
