--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view>
   <ion-nav-buttons side="left">
     <button class="button back-button buttons  header-item " nav-direction=back native-ui-sref="tab.main" native-options="{type: 'slide',direction: 'right'}">
-      <i class="icon ion-chevron-left"></i>
+      <i class="icon ion-ios-arrow-back"></i>
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
