--- a/www/css/main.css
+++ b/www/css/main.css
@@ -47,27 +47,45 @@
   padding-top: 0.8rem;
 }
 
-.main-hot-sale strong,.main-hot-sale .ion-ios-cart{
+.main-hot-sale strong, .main-hot-sale .ion-ios-cart {
   font-size: 1.6rem;
   font-weight: 600;
 }
-#main-scroll{
+
+.main-scroll {
+  overflow: hidden;
+}
+
+#main-scroll {
   width: 130%;
 }
 
-#main-scroll>span{
+#main-scroll > span {
   display: inline-block;
   width: 30%;
 }
-#main-scroll>span>p{
+
+#main-scroll > span > p {
   color: #000000;
   height: 40px;
 
 }
-#main-scroll>span>img{
+
+#main-scroll > span > img {
   display: block;
   margin: auto;
 }
+
+#classify .col-25 .item {
+  text-align: center;
+  padding-left: 0;
+}
+
+.classify-selected h2 {
+  border-left: 5px solid #FF93BC !important;
+  line-height: 25px
+}
+
 .tool-tip {
   position: absolute;
   z-index: 10000;
