--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,5 +1,5 @@
 <ion-view hide-nav-bar="true">
-  <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true">
+  <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true" >
     <div class="row text-center padding-vertical light row-center " id="main-search">
       <strong class="col-15">深圳 <i class="icon ion-arrow-down-b"></i></strong>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
@@ -56,44 +56,32 @@
           class="col icon ion-ios-cart positive text-right"></i></p>
       </ion-item>
       <ion-item>
-        <ion-scroll direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" class="full-image"
-                    style="overflow: hidden;" >
+        <ion-scroll direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" class="main-scroll">
           <div id="main-scroll">
             <span>
               <img ng-src="img/main/1.png" alt=""/>
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
-              <p class="row"><strong class="energized">￥49.88</strong><i
+              <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
               <img ng-src="img/main/1.png" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
-              <p class="row"><strong class="energized">￥49.88</strong><i
+              <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
               <img ng-src="img/main/1.png" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
-              <p class="row"><strong class="energized">￥49.88</strong><i
+              <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
               <img ng-src="img/main/1.png" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
-              <p class="row"><strong class="energized">￥49.88</strong><i
+              <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
-            <!--            <span>
-                          <img ng-src="img/main/1.png" alt="">
-                          <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
-                          <p class="row"><strong class="energized">￥49.88</strong><i
-                            class="col icon ion-ios-cart positive text-right"></i></p>
-                        </span>
-                        <span >
-                          <img ng-src="img/main/1.png" alt="">
-                          <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
-                          <p class="row"><strong class="energized">￥49.88</strong><i class="col icon ion-ios-cart positive text-right"></i></p>
-                        </span>-->
           </div>
 
         </ion-scroll>
