--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -1,12 +1,63 @@
 <ion-view>
   <ion-nav-buttons side="left">
-    <button class="button icon ion-android-home no-border"  nav-direction=back native-ui-sref="tab.main" native-options="{type: 'slide',direction: 'right'}"></button>
+    <button class="button back-button buttons  header-item" nav-direction=back native-ui-sref="tab.main"
+            native-options="{type: 'slide',direction: 'right'}">
+      <i class="icon ion-ios-arrow-back"></i>
+    </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <h1 class="title"> 我的</h1>
+    <h1 class="title">用户中心</h1>
   </ion-nav-title>
-
   <ion-content overflow-scroll="false" class="stable-bg account " has-bouncing="true">
-
+    <div class="row row-center  positive-bg  userinfo">
+      <div class="col-20 padding-left">
+        <img ng-src="img/account/header.png" alt=""/>
+      </div>
+      <div class="col-60 userinfo-details">
+        <strong class="light">黄晓敏 <i>一级会员</i></span>
+        </strong>
+        <p><span>余额 : 3650.00</span></p>
+      </div>
+      <div class="col-20">
+        <a class="light">领取积分 <i class="icon ion-ios-arrow-forward"></i>
+        </a>
+      </div>
+    </div>
+    <div class="row row-no-padding text-center row-wrap light-bg userinfo-list">
+      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+        <p>完善资料</p>
+      </a>
+      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+        <p>我的订单</p>
+      </a>
+      <a class="col-33 padding userinfo-border-b"><img ng-src="img/main/1.png" alt="">
+        <p>我的优惠卷</p>
+      </a>
+      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+        <p>我的钱包</p>
+      </a>
+      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+        <p>我的积分</p>
+      </a>
+      <a class="col-33 padding userinfo-border-b"><img ng-src="img/main/1.png" alt="">
+        <p>地址管理</p>
+      </a>
+      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+        <p>邀请记录</p>
+      </a>
+      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+        <p>意见反馈</p>
+      </a>
+      <a class="col-33 padding userinfo-border-b"><img ng-src="img/main/1.png" alt="">
+        <p>修改密码</p>
+      </a>
+      <a class="col-33 padding userinfo-border-r"><img ng-src="img/main/1.png" alt="">
+        <p>联系客服</p>
+      </a>
+    </div>
+    <p class="padding-top"></p>
+    <div class="padding">
+      <a ng-href="#/login" class="button button-positive full-image ">退出登录</a>
+    </div>
   </ion-content>
 </ion-view>
