元亨祥母婴商城

--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -23,35 +23,35 @@
         </a>
       </div>
     </div>
-    <div class="row row-no-padding text-center row-wrap light-bg userinfo-list">
-      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+    <div class="row row-no-padding text-center row-wrap row-center light-bg userinfo-list">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/data.png" alt="">
         <p>完善资料</p>
       </a>
-      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/order.png" alt="">
         <p>我的订单</p>
       </a>
-      <a class="col-33 padding userinfo-border-b"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/coupon.png" alt="">
         <p>我的优惠卷</p>
       </a>
-      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/wallet.png" alt="">
         <p>我的钱包</p>
       </a>
-      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/integral.png" alt="">
         <p>我的积分</p>
       </a>
-      <a class="col-33 padding userinfo-border-b"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/address.png" alt="">
         <p>地址管理</p>
       </a>
-      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/Invitation.png" alt="">
         <p>邀请记录</p>
       </a>
-      <a class="col-33 padding userinfo-border-rb"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/opinion.png" alt="">
         <p>意见反馈</p>
       </a>
-      <a class="col-33 padding userinfo-border-b"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/password.png" alt="">
         <p>修改密码</p>
       </a>
-      <a class="col-33 padding userinfo-border-r"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
         <p>联系客服</p>
       </a>
     </div>
