--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -18,30 +18,30 @@
       </ion-slide>
     </ion-slide-box>
     <div class="main-list row light-bg text-center main-list-first">
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/milk.png" alt="">
         <p>奶粉专区</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/articles.png" alt="">
         <p>宝宝用品</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/diapers.png" alt="">
         <p>尿裤湿巾</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/nutrition.png" alt="">
         <p>营养桶食</p>
       </a>
     </div>
     <div class="main-list row light-bg text-center">
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/baby.png" alt="">
         <p>童车童装</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/toys.png" alt="">
         <p>玩具乐器</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/dorm.png" alt="">
         <p>寝居服饰</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/1.png" alt="">
+      <a ng-href="" nav-direction=forward class="col"><img ng-src="img/main/mother.png" alt="">
         <p>孕妈中心</p>
       </a>
     </div>
