--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -59,25 +59,25 @@
         <ion-scroll direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" class="main-scroll">
           <div id="main-scroll">
             <span>
-              <img ng-src="img/main/1.png" alt=""/>
+              <img ng-src="img/main/1.png" class="full-image" alt=""/>
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" alt="">
+              <img ng-src="img/main/1.png" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" alt="">
+              <img ng-src="img/main/1.png" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" alt="">
+              <img ng-src="img/main/1.png" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
