--- a/www/css/account.css
+++ b/www/css/account.css
@@ -5,7 +5,7 @@
 
 .userinfo img {
   border: 3px solid rgba(255, 147, 188, 0.6);
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
 }
 
 .account .userinfo strong > i {
@@ -24,7 +24,7 @@
   margin-top: 0.5rem;
   border: 1px solid #ffffff;
   padding: 0.1rem 0.3rem;
-  border-radius: 0.2rem;
+  border-radius: 0.3rem;
 }
 
 .userinfo-list img {
@@ -61,6 +61,16 @@
 }
 
 .shoppingcart-footer-bar button{
-  height: 100%;
+  height: 3rem;
   border-radius: 0;
+}
+
+.col.ion-ios-arrow-back{
+  font-size: 1.6rem;
+}
+
+.account-top-bg{
+  height: 8rem!important;
+  background-color: #FF93BC;
+
 }
