--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -24,52 +24,52 @@
         <div class="row row-no-padding text-center row-wrap">
           <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
         </div>
         <div class="row row-no-padding text-center row-wrap">
           <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
 
@@ -77,26 +77,26 @@
         <div class="row row-no-padding text-center row-wrap">
           <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>           <span class="col-33">
-               <img ng-src="img/main/1.png" alt=""/>
+               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>
 
