元亨祥母婴商城

--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -9,9 +9,9 @@
     <h1 class="title">产品分类</h1>
   </ion-nav-title>
   <ion-nav-buttons side="right">
-    <button class="button icon ion-ios-search no-border grey" ng-click=""></button>
+    <button class="button icon ion-ios-search no-border grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
-  <ion-content overflow-scroll="false" has-bouncing="true" locking="false">
+  <ion-content overflow-scroll="false" has-bouncing="true" >
     <div class="row row-no-padding" id="classify">
       <div class="col-25 stable-bg">
         <ion-list class="list-borderless " >
@@ -29,7 +29,7 @@
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
@@ -37,14 +37,14 @@
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
         </div>
         <div class="row row-no-padding text-center row-wrap">
@@ -55,7 +55,7 @@
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
@@ -63,14 +63,14 @@
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
 
         </div>
@@ -82,7 +82,7 @@
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
@@ -90,14 +90,14 @@
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
                <p>伊利</p>
              </span>           <span class="col-33">
                <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
+               <p>蒙牛</p>
              </span>
 
         </div>
