--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -11,96 +11,101 @@
   <ion-nav-buttons side="right">
     <button class="button icon ion-ios-search no-border grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
-  <ion-content overflow-scroll="false" has-bouncing="true" >
+  <ion-content overflow-scroll="false" has-bouncing="true" scroll="false">
     <div class="row row-no-padding" id="classify">
       <div class="col-25 stable-bg">
-        <ion-list class="list-borderless " >
-          <ion-item ng-class="{false:'stable-bg',true:'classify-selected'}[classifyindex==$index]" ng-click="getClassifyDetails($index)"  ng-repeat="item in classifyinfo">
+        <ion-list class="list-borderless ">
+          <ion-item ng-class="{false:'stable-bg',true:'classify-selected'}[classifyindex==$index]"
+                    ng-click="getClassifyDetails($index)" ng-repeat="item in classifyinfo">
             <h2> {{item}}</h2>
           </ion-item>
         </ion-list>
       </div>
       <div class="col-75">
-        <div class="row row-no-padding text-center row-wrap">
-          <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false">
+          <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
+            <div class="row row-no-padding text-center row-wrap">
+              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>伊利</p>
-             </span>           <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+             </span> <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-        </div>
-        <div class="row row-no-padding text-center row-wrap">
-          <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+            </div>
+            <div class="row row-no-padding text-center row-wrap">
+              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>伊利</p>
-             </span>           <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-
-        </div>
-        <div class="row row-no-padding text-center row-wrap">
-          <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-          <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>           <span class="col-33">
-               <img ng-src="img/main/1.png"  class="full-image" alt=""/>
+             </span> <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
 
-        </div>
+            </div>
+            <div class="row row-no-padding text-center row-wrap">
+              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+               <p>伊利</p>
+             </span>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+               <p>蒙牛</p>
+             </span>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+               <p>伊利</p>
+             </span>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+               <p>蒙牛</p>
+             </span>
+              <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+               <p>伊利</p>
+             </span> <span class="col-33">
+               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+               <p>蒙牛</p>
+             </span>
+
+            </div>
+          </div>
+        </ion-scroll>
       </div>
     </div>
     </div>
