元亨祥母婴商城

--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -22,7 +22,7 @@
         </ion-list>
       </div>
       <div class="col-75">
-        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false">
+        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false" has-bouncing="true">
           <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
             <div class="row row-no-padding text-center row-wrap">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
