--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -9,7 +9,7 @@
     <h1 class="title">用户中心</h1>
   </ion-nav-title>
   <ion-content overflow-scroll="false" class="stable-bg account " has-bouncing="true">
-    <div class="row row-center  positive-bg  userinfo">
+    <div class="row row-center account-top-bg    userinfo">
       <div class="col-20 padding-left">
         <img ng-src="img/account/header.png" alt=""/>
       </div>
