--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -24,85 +24,89 @@
       <div class="col-75">
         <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false" has-bouncing="true">
           <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
-            <div class="row row-no-padding text-center row-wrap">
+            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+              <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+              <p>伊利</p>
+              </span>
+              <span class="col-30">
+               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
-             </span> <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
-               <p>蒙牛</p>
+             </span>
              </span>
             </div>
-            <div class="row row-no-padding text-center row-wrap">
-              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
+              <p class="stable-bg  full-image text-left classify-details-bar"> 牛奶系列</p>
+              <span class="col-30">
+               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+              <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+              <p>伊利</p>
+              </span>
+              <span class="col-30">
+               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
-             </span> <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
-               <p>蒙牛</p>
              </span>
-
+              </span>
             </div>
-            <div class="row row-no-padding text-center row-wrap">
+            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+              <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+              <p>伊利</p>
+              </span>
+              <span class="col-30">
+               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </span>
-              <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
+              <span class="col-30">
+               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
-             </span> <span class="col-33">
-               <img ng-src="img/main/1.png" class="full-image" alt=""/>
-               <p>蒙牛</p>
              </span>
-
+              </span>
             </div>
           </div>
         </ion-scroll>
