--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -8,13 +8,13 @@
     <ion-slide-box show-pager="true" does-continue="true" auto-play="true" slide-interval="3000"
                    delegate-handle="slideboximgs" id="main-slide">
       <ion-slide>
+        <img ng-src="img/banner/banner.jpg" alt="" class="full-image"/>
+      </ion-slide>
+      <ion-slide>
         <img ng-src="img/banner/1.png" alt="" class="full-image"/>
       </ion-slide>
       <ion-slide>
         <img ng-src="img/banner/2.png" alt="" class="full-image"/>
-      </ion-slide>
-      <ion-slide>
-        <img ng-src="img/banner/3.png" alt="" class="full-image"/>
       </ion-slide>
     </ion-slide-box>
     <div class="main-list row light-bg text-center main-list-first">
@@ -49,7 +49,7 @@
     <ion-list>
       <ion-item class="text-center"><strong>热卖产品</strong></ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/cp@2.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
@@ -59,20 +59,20 @@
         <ion-scroll ng-style="{width:scrollWidth}" delegate-handle="main-scroll"  direction="x" zooming="true" overflow-scroll="false"  scrollbar-x="false" has-bouncing="true" class="main-scroll">
           <div  ng-style="{width:scrollContentWidth}" id="main-scroll">
             <span>
-              <img ng-src="img/main/1.png" class="full-image" alt=""/>
-              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <img ng-src="img/main/cp@3.jpg" class="full-image" alt=""/>
+              <p class="text-wrap">宓驰婴儿推车超轻便可做可躺折叠</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" class="full-image" alt="">
-              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <img ng-src="img/main/cp@1.jpg" class="full-image" alt="">
+              <p class="text-wrap">爱得利奶瓶宽口径婴儿奶瓶带吸管手</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" class="full-image" alt="">
-              <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
+              <img ng-src="img/main/toys.png" class="full-image" alt="">
+              <p class="text-wrap">Little Tikes美国小太克儿童玩具</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
@@ -97,21 +97,21 @@
     <ion-list>
       <ion-item class="text-center"><strong>推荐产品</strong></ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/cp@3.jpg" alt="">
+        <h2>都市型婴儿四轮推车遮阳车</h2>
+        <p class="text-wrap">德国品牌海外直供德国直邮Buga-boo Bee3都市型婴儿四轮推车这样车罩 轻便型</p>
+        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
+          class="col icon ion-ios-cart positive text-right"></i></p>
+      </ion-item>
+      <ion-item class="item-thumbnail-left main-hot-sale">
+        <img ng-src="img/main/cp@1.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
           class="col icon ion-ios-cart positive text-right"></i></p>
       </ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
-        <img ng-src="img/main/1.png" alt="">
-        <h2>婴幼儿配方奶粉3段</h2>
-        <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
-        <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
-          class="col icon ion-ios-cart positive text-right"></i></p>
-      </ion-item>
-      <ion-item class="item-thumbnail-left main-hot-sale">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/cp@4.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
